--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "uuid": "901b7c85-3fb3-4423-90a9-d7020c1f3e47"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=14.19.1 <=18.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
