--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/strapi": "4.10.2",
     "axios": "^1.4.0",
     "express": "^4.18.2",
-    "pg": "8.8.0"
+    "pg": "^8.11.3",
+    "pg-connection-string": "^2.6.2"
   },
   "author": {
     "name": "A Strapi developer"
