--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.10.2",
     "@strapi/plugin-users-permissions": "4.10.2",
+    "@strapi/provider-upload-cloudinary": "^4.15.5",
     "@strapi/strapi": "4.10.2",
     "axios": "^1.4.0",
     "express": "^4.18.2",
@@ -41,10 +42,22 @@
     }
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"],
-    "*.css": ["stylelint --fix", "git add"],
-    "*.md": ["markdownlint", "git add"],
-    "*.json": ["prettier --write", "git add"],
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.css": [
+      "stylelint --fix",
+      "git add"
+    ],
+    "*.md": [
+      "markdownlint",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ],
     "*": "git add"
   }
 }
