--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@strapi/provider-upload-cloudinary": "^4.15.5",
     "@strapi/strapi": "4.10.2",
     "axios": "^1.4.0",
+    "cloudinary": "^1.41.0",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "pg-connection-string": "^2.6.2"
